--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <!-- temporarily load remotely for rapid code updates -->
-    <<iframe src="" style="width: 100vw; height: 100vh; position: fixed; top: 0; left: 0" allowfullscreen allowscriptaccess allowtransparency scrolling="no" frameborder="0" width="100%" height="100%"></iframe>>
+    <<iframe src="http://192.168.1.103/maxcast/app-v3/index.html" style="width: 100vw; height: 100vh; position: fixed; top: 0; left: 0" allowfullscreen allowscriptaccess allowtransparency scrolling="no" frameborder="0" width="100%" height="100%"></iframe>>
 </body>
 </html>
