--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+	<meta charset="utf-8" />
+	<title>MaxCast</title>
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <title>MaxCast</title>
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
-    <script src="cordova.js"></script>
+	<link rel="stylesheet" href="assets/app.css" />
 </head>
 <body>
-    <!-- temporarily load remotely for rapid code updates -->
-    <<iframe src="http://192.168.1.103/maxcast/app-v3/index.html" style="width: 100vw; height: 100vh; position: fixed; top: 0; left: 0" allowfullscreen allowscriptaccess allowtransparency scrolling="no" frameborder="0" width="100%" height="100%"></iframe>>
+	<div class="device-name"></div>
+	<div class="time"></div>
+	<div class="loading"><img src="loading.svg" /></div>
+	<div class="paused"><img src="paused.png" /></div>
+	<div class="player"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+	<script src="cordova.js"></script>
+	<script src="assets/app.js"></script>
 </body>
 </html>
