--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
 	<link rel="stylesheet" href="assets/app.css" />
+	<!-- debugging -->
+	<script src="http://192.168.1.100:3333/target/target-script-min.js#anonymous"></script>
 </head>
 <body>
 	<div class="device-name"></div>
