--- a/www/index.html
+++ b/www/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <title>MaxCast</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
+	<title>MaxCast</title>
+	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
     <script src="cordova.js"></script>
 	<!-- debugging -->
 	<script src="http://192.168.1.100:3333/target/target-script-min.js#anonymous"></script>
 </head>
 <body>
     <!-- temporarily load remotely for rapid code updates -->
-    <iframe src="http://192.168.1.103/maxcast/app-v3/index.html" style="width: 100%; height: 100%; position: fixed; top: 0; left: 0" allowfullscreen allowscriptaccess allowtransparency scrolling="no" frameborder="0" width="100%" height="100%"></iframe>>
+    <iframe src="http://192.168.1.103/maxcast/app-v3/index.html#59faf04dabe0f" style="width: 100%; height: 100%; position: fixed; top: 0; left: 0" allowfullscreen allowscriptaccess allowtransparency scrolling="no" frameborder="0" width="100%" height="100%" onerror="window.location.reload(true)"></iframe>
 </body>
 </html>
